# ComfyUI-LaVi-Bridge-Wrapper

./: README.md  nodes.py  pyproject.toml  requirements.txt
examples/: lavi_t5_sd15_example_workflow.json
